[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/levels/Playground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/levels/Level FxShapes.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/rate control.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/Tutorial.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/level button.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/level complete.font.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui styles/ui.theme.tres" type="Theme" id=7]
[ext_resource path="res://scripts/ui/fullscreen.gd" type="Script" id=8]
[ext_resource path="res://assets/textures/marbelous_logo.png" type="Texture" id=9]
[ext_resource path="res://scenes/ui/volume slider.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/main menu.gd" type="Script" id=11]
[ext_resource path="res://scenes/level button.tscn" type="PackedScene" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.53, 0.2226, 0.381423, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.921569, 0.168627, 0.564706, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47, 0.451827, 0.1974, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.55, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.956863, 0.580392, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.160784, 0.219608, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.21, 0.578667, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.14902, 0.466667, 0.858824, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.281283, 0.133, 0.35, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.682353, 0.0862745, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.490196, 0.0588235, 0.572549, 1 )

[sub_resource type="Gradient" id=15]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.152941, 0.478431, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.956863, 0.580392, 0.133333, 1 )

[node name="main menu" type="Node2D"]
script = ExtResource( 11 )
level_button = ExtResource( 12 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 1, 950.698 )
texture = SubResource( 2 )
centered = false

[node name="marbelous_logo" type="Sprite" parent="."]
position = Vector2( 646.553, 118.258 )
scale = Vector2( 0.453451, 0.453451 )
texture = ExtResource( 9 )

[node name="ui" type="Control" parent="."]
margin_right = 1281.0
margin_bottom = 719.0
mouse_filter = 2
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="ui"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="ui/main"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 480.0
margin_top = 553.628
margin_right = 823.0
margin_bottom = 580.628
size_flags_horizontal = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="ui/main"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 480.0
margin_top = 625.628
margin_right = 823.0
margin_bottom = 652.628
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levels" type="GridContainer" parent="ui/main"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
margin_left = 133.0
margin_top = 375.0
margin_right = 1170.0
margin_bottom = 554.0
theme = ExtResource( 7 )
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sandbox" type="Button" parent="ui/main/levels"]
margin_right = 343.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Sandbox"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
level = ExtResource( 1 )

[node name="fxshape" type="Button" parent="ui/main/levels"]
margin_left = 347.0
margin_right = 690.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "FxShape"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
level = ExtResource( 2 )

[node name="fxshape2" type="Button" parent="ui/main/levels"]
margin_left = 694.0
margin_right = 1037.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Rate control"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
level = ExtResource( 3 )

[node name="tutorial" type="Button" parent="ui/main/levels"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 31.0
margin_right = 343.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "how to"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
level = ExtResource( 4 )

[node name="options menu" type="Control" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="ui/options menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="slider" parent="ui/options menu" instance=ExtResource( 10 )]
margin_left = 627.229
margin_top = 289.669
margin_right = -630.771
margin_bottom = -292.331

[node name="close" type="Button" parent="ui/options menu"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 480.0
margin_top = 625.628
margin_right = 823.0
margin_bottom = 652.628
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="CheckButton" parent="ui/options menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = 144.0
margin_right = 98.0
margin_bottom = 176.0
text = "Fullscreen"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="Control" parent="ui"]
visible = false
margin_right = 1287.0
margin_bottom = 719.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="ui/win"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 16 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="ui/win"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 139.0
margin_top = -227.0
margin_right = -159.0
margin_bottom = -72.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Button" parent="ui/win/HBoxContainer"]
margin_right = 444.0
margin_bottom = 155.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 17 )
text = "main menu"

[node name="retry" type="Button" parent="ui/win/HBoxContainer"]
visible = false
margin_left = 544.0
margin_right = 989.0
margin_bottom = 155.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 17 )
text = "Retry"

[node name="next" type="Button" parent="ui/win/HBoxContainer"]
margin_left = 544.0
margin_right = 989.0
margin_bottom = 155.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 18 )
text = "Next level"

[node name="complete" type="Label" parent="ui/win"]
margin_left = 115.88
margin_top = 136.516
margin_right = 1180.88
margin_bottom = 296.516
custom_fonts/font = ExtResource( 6 )
text = "Level complete"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ui/main/options" to="." method="on_options_pressed"]
[connection signal="pressed" from="ui/main/quit" to="." method="on_quit_pressed"]
[connection signal="pressed" from="ui/main/levels/sandbox" to="ui/main/levels/sandbox" method="on_pressed"]
[connection signal="pressed" from="ui/main/levels/fxshape" to="ui/main/levels/fxshape" method="on_pressed"]
[connection signal="pressed" from="ui/main/levels/fxshape2" to="ui/main/levels/fxshape2" method="on_pressed"]
[connection signal="pressed" from="ui/main/levels/tutorial" to="ui/main/levels/tutorial" method="on_pressed"]
[connection signal="pressed" from="ui/options menu/close" to="." method="on_options_close_pressed"]
[connection signal="pressed" from="ui/options menu/fullscreen" to="ui/options menu/fullscreen" method="on_pressed"]
